--- a/hrmsproject/templates/partials/topheader.html
+++ b/hrmsproject/templates/partials/topheader.html
@@ -117,7 +117,13 @@
       <div class="d-flex flex-wrap align-items-center gap-3">
         <div class="dropdown">
           <button class="d-flex justify-content-center align-items-center rounded-circle" type="button" data-bs-toggle="dropdown">
-            <img src="{% static 'assets/images/user.png' %}" alt="Profile" class="w-40-px h-40-px object-fit-cover rounded-circle">
+            {% if user_profile_image %}
+              <img src="{{ user_profile_image }}" alt="Profile" class="w-40-px h-40-px object-fit-cover rounded-circle">
+            {% else %}
+              <span class="w-40-px h-40-px bg-success text-white rounded-circle d-flex justify-content-center align-items-center fw-semibold">
+                {{ request.user.first_name|first|default:request.user.username|first|upper }}
+              </span>
+            {% endif %}
           </button>
           <div class="dropdown-menu to-top dropdown-menu-sm">
             <div class="py-12 px-16 radius-8 bg-primary-50 mb-16 d-flex align-items-center justify-content-between gap-2">
